# INF568-ed25519

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs
src/lib/: arithmetic.rs  ed25519_keygen.rs  ed25519_sign.rs  ed25519_verify.rs  keygen.rs  sign.rs  verify.rs
src/lib/arithmetic/: montgomery.rs  proj_edwards.rs  proj_montgomery.rs  xline_proj_montgomery.rs
tests/: ed25519.rs
tests/samples/: tampered_message  tampered_signature
